 'GSM' is Greg Sabino Mullane, greg@turnstep.com


Version 3.3.0  Released May 31, 2014 (git commit 055f788cf96b380b9fe0e80b6cedb88f8d1799b8)

  - Major cleanup of UTF-8 support:
      Fix quoting of UTF-8 values
      Add support for UTF-8 statement strings
      Fix UTF-8 support in placeholders and return values
    [Dagfinn Ilmari Mannsåker] (CPAN bug #95214 and #91655)
      Test that the Pg server agrees with us about the lengths of input strings.
      Refactor Unicode test to use anon hashes to describe the tests to run.
      Test pg_enable_utf8 of -1, in addition to 0 and 1.
      Extend the Unicode round-trip tests to verify ASCII, BMP and non-BMP code points.
      Test that characters created in the server reach the client correctly.
    [Nicholas Clark]

  - Rewrite foreign_key_info to be just one query
    [Dagfinn Ilmari Mannsåker]

  - Remove ODBC support from foreign_key_info
    [Dagfinn Ilmari Mannsåker]

  - Remove use of dTHX in functions in quote.c and types.c
    [Nicholas Clark]


Version 3.2.1  Released May 20, 2014 (git commit a56ef5c4715440d4fc2054df5477996b0e287467)

  - Stricter testing for array slices: disallow number-colon-number from being
    parsed as a placeholder.
    [Greg Sabino Mullane] (CPAN bug #95713)

  - Fix for small leak with AutoInactiveDestroy
    [David Dick] (CPAN bug #95505)

  - Adjust test regex to fix failing t/01_connect.t on some platforms
    [Greg Sabino Mullane]

  - Further tweaks to get PGINITDB working for test suite.
    [Nicholas Clark]


Version 3.2.0  Released May 15, 2014 (git commit 897974c2865259bb9786d8b0989f8e42db0a0d79)

  - Add new attribute pg_placeholder_nocolons to turn off all parsing of
    colons into placeholders.
    [Graham Ollis] (CPAN bug #95173)

  - Fix incorrect skip count for HandleSetErr
    [Greg Sabino Mullane] (CPAN bug #94841)

  - Don't attempt to use the POSIX signalling stuff if the OS is Win
    [Greg Sabino Mullane] (CPAN bug ##94841)
