@@ -1,6 +1,12 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
+Version ??
+
+  - Make sure column_info() and table_info() can handle materialized views.
+    [Greg Sabino Mullane] (CPAN bug #97032)
+
+
 Version 3.3.0  Released May 31, 2014 (git commit 055f788cf96b380b9fe0e80b6cedb88f8d1799b8)
 
   - Major cleanup of UTF-8 support:
